# project-euler-math

./: README.rst  pyproject.toml
project_euler_math/: combinatorics.py  continuedfraction.py  eisenstein.py  fraction.py  gaussian.py  integrate.py  matrix.py  mod.py  ntheory.py  numeralsystem.py  optimize.py  polynomial.py  repeatingdecimal.py  roots.py  sieve.py  utils.py
tests/: test_combinatorics.py  test_continuedfraction.py  test_integrate.py  test_matrix.py  test_ntheory.py  test_numeralsystem.py  test_optimisation.py  test_optimize.py  test_polynomial.py  test_repeatingdecimal.py  test_roots.py  utils.py
